--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,6 @@
 nginx_repository_address: "http://nginx.org/packages"
 nginx_version: 'mainline'
+
+nginx_packages_state: present
 nginx_packages:
   - nginx
