--- a/tasks/repo-redhat.yml
+++ b/tasks/repo-redhat.yml
@@ -1,5 +1,5 @@
 ---
-  - name: Add Nginx official repository for Stable version Nginx
+  - name: Add Nginx official repository for Stable version Nginx for RedHat
     yum_repository:
       name: nginx
       description: Nginx official repository
@@ -12,7 +12,7 @@
       - nginx
       - nginx-repo
 
-  - name: Add Nginx official repository for Mainline version Nginx
+  - name: Add Nginx official repository for Mainline version Nginx for RedHat
     yum_repository:
       name: nginx
       description: Nginx official mainline repository
