--- a/tasks/repo-debian.yml
+++ b/tasks/repo-debian.yml
@@ -13,7 +13,7 @@
       repo: "deb {{ nginx_repository_address }}/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} nginx"
       state: present
       filename: 'nginx-repo'
-    when: ansible_os_family == "Debian" and nginx_version != 'mainline'
+    when: ansible_os_family == "Debian" and nginx_version == 'stable'
     register: nginx_stable
     tags:
       - nginx
